# AirProof

./: .env
zk-backend/: .env.example  .gitignore  README.md
zk-backend/json/: DOB-Attestaion__proof.json  DOB-Attestaion_groth16_proof.json  DOB-Attestaion_plonk_proof.json
zk-backend/lib/src/: lib.rs
zk-backend/program/: Cargo.toml
zk-backend/program/src/: main.rs
zk-backend/script/: Cargo.toml
