[package]
name = "fibonacci-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[crate]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
fibonacci-lib = { path = "../lib" }
ethers-core = "2.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4"
alloy-sol-types = "0.8.15"
hex = "0.4"
actix-web = "4.9.0"
actix-multipart = "0.6.2"
futures = "0.3"
uuid = { version = "1.2.1", features = ["v4"] }

[build-dependencies]
sp1-build = "4.0.0"
sp1-helper = "2.0.0"